# etc/usrmng.py
@@ -1,6 +1,12 @@
 from fastapi_users.db import SQLAlchemyUserDatabase
 from fastapi_users import FastAPIUsers
 from fastapi import FastAPI, Request
+from fastapi import APIRouter, Depends, HTTPException, Response, status
+from fastapi.security import OAuth2PasswordRequestForm
+from fastapi_users import models
+from fastapi_users.authentication import Authenticator, BaseAuthentication
+from fastapi_users.db import BaseUserDatabase
+from fastapi_users.router.common import ErrorCode
 from sqlalchemy.orm import Session
 import requests
 
@@ -9,6 +15,7 @@ from db.schemas import User, UserCreate, UserUpdate, UserDB
 from db.auth import jwt_authentication
 from db.db import database, SessionLocal
 from etc.ncr import get_headers
+from db import schemas
 
 users = UserTable.__table__
 user_db = SQLAlchemyUserDatabase(UserDB, database, users)
@@ -21,6 +28,40 @@ fastapi_users = FastAPIUsers(
     UserUpdate,
     UserDB,
 )
+
+
+def get_auth_router(
+        backend: BaseAuthentication,
+        user_db: BaseUserDatabase[models.BaseUserDB],
+        authenticator: Authenticator,
+) -> APIRouter:
+    """Generate a router with login/logout routes for an authentication backend."""
+    router = APIRouter()
+
+    @router.post("/login")
+    async def login(
+            response: Response, credentials: OAuth2PasswordRequestForm = Depends()
+    ):
+        user = await user_db.authenticate(credentials)
+
+        if user is None or not user.is_active:
+            raise HTTPException(
+                status_code=status.HTTP_400_BAD_REQUEST,
+                detail=ErrorCode.LOGIN_BAD_CREDENTIALS,
+            )
+
+        login_response = await backend.get_login_response(user, response)
+        login_response['is_owner'] = user.is_owner
+        return login_response
+
+    if backend.logout:
+        @router.post("/logout")
+        async def logout(
+                response: Response, user=Depends(authenticator.get_current_active_user)
+        ):
+            return await backend.get_logout_response(user, response)
+
+    return router
 
 
 def initialize_fastapi_users(app: FastAPI):
@@ -42,6 +83,4 @@ def initialize_fastapi_users(app: FastAPI):
     app.include_router(
         fastapi_users.get_auth_router(jwt_authentication), prefix="/auth", tags=["auth"]
     )
-    app.include_router(
-        fastapi_users.get_register_router(on_after_register), prefix="/auth", tags=["auth"]
-    )
+    app.include_router(fastapi_users.get_register_router(after_register=on_after_register), prefix="/auth", tags=["auth"])
